forecast/src/objects/SpecialistForecastOverride__c.object
<CustomObject>
    <label>Specialist Forecast Override</label>
    <pluralLabel>Specialist Forecast Overrides</pluralLabel>
    <description>Specialist Forecast Override Object Used in the Specialist Forecasting Unmanaged Package</description>
    <sharingModel>Private</sharingModel>


    <nameField>
        <displayFormat>SFO-{00000000}</displayFormat>
        <label>Specialist Forecast Override</label>
        <type>AutoNumber</type>
    </nameField>

    <fields>
        <fullName>OwnOverrideNotes__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Own Override Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagerOverrideCommitNotes__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Manager Override Commit  Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagerOverrideBestCaseNotes__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Manager Override best case Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnOverriddenBestCaseAmount__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Own Overridden Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <inlineHelpText>Own Overridden Best Case forecasted opportunity  total amount for cloud-specific products</inlineHelpText>
    </fields>
    <fields>
        <fullName>OwnOverriddenCommitAmount__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Own Overridden Commit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <inlineHelpText>Own Overridden Commit forecasted opportunity  total amount for cloud-specific products</inlineHelpText>
    </fields>
    <fields>
        <fullName>ManagerOverriddenCommitAmount__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Manager Overridden Commit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <inlineHelpText>Manager Overridden Commit forecasted opportunity amount for specific products</inlineHelpText>
    </fields>
    <fields>
        <fullName>ManagerOverriddenBestCaseAmount__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Manager Overridden Best Case Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <inlineHelpText>Manager Overridden Best Case forecasted opportunity amount</inlineHelpText>
    </fields>
    <fields>
        <fullName>PreviousDirectRepCommitAmount__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Previous Commit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <inlineHelpText>Old Direct Report Commit forecasted opportunity amount</inlineHelpText>
    </fields>
    <fields>
        <fullName>PreviousDirectRepBestcaseAmount__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Previous Best Case Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <inlineHelpText>Old Direct Report Best Case forecasted opportunity amount</inlineHelpText>
    </fields>
    <fields>
        <fullName>PeriodType__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Period Type</label>
        <length>20</length>
        <type>Text</type>
        <inlineHelpText>Period of the Forecast, currently either a Month or a Quarter</inlineHelpText>
    </fields>
    <fields>
        <fullName>ExtIdentifier__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <externalId>true</externalId>
        <label>External Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>

    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OwnOverriddenBestCaseAmount__c</columns>
        <columns>OwnOverriddenCommitAmount__c</columns>
        <columns>ManagerOverriddenBestCaseAmount__c</columns>
        <columns>ManagerOverriddenCommitAmount__c</columns>
        <columns>PeriodType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>

</CustomObject>